--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="وب‌پژوه، طراحی و توسعه‌ی وب">
     <meta property="og:title" content="وب‌پژوه" />
     <meta property="og:description" content="طراحی و توسعه‌ی وب">
-    <meta property="og:image" content="https://avatars1.githubusercontent.com/u/17279395?s=240" />
+    <meta property="og:image" content="https://avatars1.githubusercontent.com/u/17279395?s=460&v=4" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
