Change my description

--- a/index.html
+++ b/index.html
@@ -41,7 +41,15 @@
         </header>
         <div id="coverText">
             <h2 class="ctTitle">وب‌پژوه، ایده‌ها را حقیقت می‌بخشد!</h2>
-            <p class="ctText">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد و کاربرد آن روز به روز گسترده تر و وسیع تر خواهد شد و این پیشرفت انتهایی ندارد، برای همین است که دنیای وب بر خلاف تکنولوژی های دیگر، رونق بیشتری داشته و پر طرفدارتر است، در نتیجه ما نیز به فعالیت در این زمینه پرداخته و جوانب دیگر دنیای نرم افزار را کاملاً راه کرده ایم!</p>
+            <div class="ctText">
+                <p>دنیای امروز، دنیای ارتباطات است و فاصله‌ها معنای سابق خود را از دست داده‌اند و هرکس به روش‌های قدیمی اکتفا کند، از قافله عقب مانده است؛ شما می‌توانید حرفه‌ی خود را به صورت اینترنتی معرفی کنید و آن را در دسترس کسانی قرار دهید که حتی در یک کشور یا قاره با شما زندگی نمی‌کنند! جدای از آنکه هیچ منشی نمی‌تواند همزمان با بیش از یک نفر صحبت کند، از پرسش‌های تکراری مشتریان و مراجعین نیز خسته و شاید گاهی عصبانی شود! اما کامپیوترها خستگی‌ناپذیرند و می‌توانند درباره‌ی شما هزاران بار توضیح داده و درخواست‌های مراجعین بسیاری را به صورت همزمان پاسخ دهند! آیا این کمی بیشتر از «هیجان‌انگیز» نیست؟!</p>
+                <ul class="cTextList">
+                    <li>اگر صاحب یک شرکت تجاری یا خدماتی هستید، یک وب‌سایت به بهترین نحو ممکن می‌تواند به بازدهی بیشتر کار شما کمک کند!</li>
+                    <li>اگر یک شخصیت سیاسی یا اجتماعی هستید، باید فعالیت‌هایتان را در وب‌سایت جدیدتان ثبت کرده و به نحو قابل توجهی مردمی‌تر باشید!</li>
+                    <li>اگر پژوهشگر و در مسائل علمی صاحب نوشته‌هایی هستید که نمی‌خواهید نزد افرادی محدود غبار بخورند، می‌توانید آنها را در وب‌سایت جدید خود نشر کنید!</li>
+                    <li>به اختصار: اگر می‌خواهید بیشتر دیده شوید، «وب‌پژوه» شما را در این راه یاری می‌دهد!</li>
+                </ul>
+            </div>
             <div class="ctButtons">
                 <a href="#services" class="goto"><div class="ctButton ctBtn1 noselect"><i class="material-icons">business_center</i> <div class="ctButtonText">مشاهده‌ی خدمات</div></div></a>
                 <a href="#contact" class="goto"><div class="ctButton ctBtn2 noselect"><i class="material-icons" style="font-size:21px;margin-top:3px;">email</i> <div class="ctButtonText">تماس با وب‌پژوه</div></div></a>
