Updated: cText content

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <ul class="cTextList">
                     <li>اگر صاحب یک شرکت تجاری یا خدماتی هستید، یک وب‌سایت به بهترین نحو ممکن می‌تواند به بازدهی بیشتر کار شما کمک کند!</li>
                     <li>اگر یک شخصیت سیاسی یا اجتماعی هستید، باید فعالیت‌هایتان را در وب‌سایت جدیدتان ثبت کرده و به نحو قابل توجهی مردمی‌تر باشید!</li>
-                    <li>اگر پژوهشگر و در مسائل علمی صاحب نوشته‌هایی هستید که نمی‌خواهید نزد افرادی محدود غبار بخورند، می‌توانید آنها را در وب‌سایت جدید خود نشر کنید!</li>
+                    <li>اگر پژوهشگر و در مسائل علمی صاحب نوشته‌هایی هستید که نمی‌خواهید نزد افرادی معدود غبار بخورند، می‌توانید آنها را در وب‌سایت جدید خود نشر کنید!</li>
                     <li>به اختصار: اگر می‌خواهید بیشتر دیده شوید، «وب‌پژوه» شما را در این راه یاری می‌دهد!</li>
                 </ul>
             </div>
