Add social icons

--- a/index.html
+++ b/index.html
@@ -215,8 +215,14 @@
             <div class="col-lg-6 col-sm-12 footerRight noselect">
                 <span class="ft1">طراحی‌شده با</span> <span class="footerHeart material-icons">favorite</span><span class="ft2"> توسط «وب‌پژوه»، کلیه‌ی حقوق محفوظ است.</span>
             </div>
-            <div class="col-lg-6 col-sm-12">
-
+            <div class="col-lg-6 col-sm-12" style="float: left;">
+                <ul id="footerSocial">
+                    <a href="https://t.me/WebPajooh" title="Telegram Channel" rel="nofollow" target="_blank"><li class="fsIcon fsTelegram"></li></a>
+                    <a href="https://www.instagram.com/webpajooh" title="Instagram" rel="nofollow" target="_blank"><li class="fsIcon fsInstagram"></li></a>
+                    <a href="https://github.com/webpajooh" title="Github" rel="nofollow" target="_blank"><li class="fsIcon fsGithub"></li></a>
+                    <a href="https://codepen.io/webpajooh" title="CodePen" rel="nofollow" target="_blank"><li class="fsIcon fsCodepen"></li></a>
+                    <a href="https://idpay.ir/webpajooh" title="Donate" rel="nofollow" target="_blank"><li class="fsIcon fsDonate"></li></a>
+                </ul>
             </div>
         </footer>
     </div>
