Update: Responsive social icons

--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
                 </div>
             </div>
         </div>
-        <footer id="footer" class="col-lg-12">
+        <footer id="footer" class="row">
             <div class="col-lg-6 col-sm-12 footerRight noselect">
                 <span class="ft1">طراحی‌شده با</span> <span class="footerHeart material-icons">favorite</span><span class="ft2"> توسط «وب‌پژوه»، کلیه‌ی حقوق محفوظ است.</span>
             </div>
-            <div class="col-lg-6 col-sm-12" style="float: left;">
+            <div class="footerLeft col-lg-6 col-sm-12" style="float:left;">
                 <ul id="footerSocial">
                     <a href="https://t.me/WebPajooh" title="Telegram Channel" rel="nofollow" target="_blank"><li class="fsIcon fsTelegram"></li></a>
                     <a href="https://www.instagram.com/webpajooh" title="Instagram" rel="nofollow" target="_blank"><li class="fsIcon fsInstagram"></li></a>
