New: animated cText with animate.css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:image" content="https://avatars1.githubusercontent.com/u/17279395?s=240" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/animate.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
@@ -40,19 +41,19 @@
             </nav>
         </header>
         <div id="coverText">
-            <h2 class="ctTitle">وب‌پژوه، ایده‌ها را حقیقت می‌بخشد!</h2>
+            <h2 class="ctTitle animated fadeInDown">وب‌پژوه، ایده‌ها را حقیقت می‌بخشد!</h2>
             <div class="ctText">
-                <p>دنیای امروز، دنیای ارتباطات است و فاصله‌ها معنای سابق خود را از دست داده‌اند و هرکس به روش‌های قدیمی اکتفا کند، از قافله عقب مانده است؛ شما می‌توانید حرفه‌ی خود را به صورت اینترنتی معرفی کنید و آن را در دسترس کسانی قرار دهید که حتی در یک کشور یا قاره با شما زندگی نمی‌کنند! جدای از آنکه هیچ منشی نمی‌تواند همزمان با بیش از یک نفر صحبت کند، از پرسش‌های تکراری مشتریان و مراجعین نیز خسته و شاید گاهی عصبانی شود! اما کامپیوترها خستگی‌ناپذیرند و می‌توانند درباره‌ی شما هزاران بار توضیح داده و درخواست‌های مراجعین بسیاری را به صورت همزمان پاسخ دهند! آیا این کمی بیشتر از «هیجان‌انگیز» نیست؟!</p>
+                <p class="animated fadeIn delay-1s">دنیای امروز، دنیای ارتباطات است و فاصله‌ها معنای سابق خود را از دست داده‌اند و هرکس به روش‌های قدیمی اکتفا کند، از قافله عقب مانده است؛ شما می‌توانید حرفه‌ی خود را به صورت اینترنتی معرفی کنید و آن را در دسترس کسانی قرار دهید که حتی در یک کشور یا قاره با شما زندگی نمی‌کنند! جدای از آنکه هیچ منشی نمی‌تواند همزمان با بیش از یک نفر صحبت کند، از پرسش‌های تکراری مشتریان و مراجعین نیز خسته و شاید گاهی عصبانی شود! اما کامپیوترها خستگی‌ناپذیرند و می‌توانند درباره‌ی شما هزاران بار توضیح داده و درخواست‌های مراجعین بسیاری را به صورت همزمان پاسخ دهند! آیا این کمی بیشتر از «هیجان‌انگیز» نیست؟!</p>
                 <ul class="cTextList">
-                    <li>اگر صاحب یک شرکت تجاری یا خدماتی هستید، یک وب‌سایت به بهترین نحو ممکن می‌تواند به بازدهی بیشتر کار شما کمک کند!</li>
-                    <li>اگر یک شخصیت سیاسی یا اجتماعی هستید، باید فعالیت‌هایتان را در وب‌سایت جدیدتان ثبت کرده و به نحو قابل توجهی مردمی‌تر باشید!</li>
-                    <li>اگر پژوهشگر و در مسائل علمی صاحب نوشته‌هایی هستید که نمی‌خواهید نزد افرادی معدود غبار بخورند، می‌توانید آنها را در وب‌سایت جدید خود نشر کنید!</li>
-                    <li>به اختصار: اگر می‌خواهید بیشتر دیده شوید، «وب‌پژوه» شما را در این راه یاری می‌دهد!</li>
+                    <li class="ctlLi animated fadeInDown delay-2s">اگر صاحب یک شرکت تجاری یا خدماتی هستید، یک وب‌سایت به بهترین نحو ممکن می‌تواند به بازدهی بیشتر کار شما کمک کند!</li>
+                    <li class="ctlLi animated fadeInDown delay-27s">اگر یک شخصیت سیاسی یا اجتماعی هستید، باید فعالیت‌هایتان را در وب‌سایت جدیدتان ثبت کرده و به نحو قابل توجهی مردمی‌تر باشید!</li>
+                    <li class="ctlLi animated fadeInDown delay-34s">اگر پژوهشگر و در مسائل علمی صاحب نوشته‌هایی هستید که نمی‌خواهید نزد افرادی معدود غبار بخورند، می‌توانید آنها را در وب‌سایت جدید خود نشر کنید!</li>
+                    <li class="ctlLi animated fadeInDown delay-4s">به اختصار: اگر می‌خواهید بیشتر دیده شوید، «وب‌پژوه» شما را در این راه یاری می‌دهد!</li>
                 </ul>
             </div>
             <div class="ctButtons">
-                <a href="#services" class="goto"><div class="ctButton ctBtn1 noselect"><i class="material-icons">business_center</i> <div class="ctButtonText">مشاهده‌ی خدمات</div></div></a>
-                <a href="#contact" class="goto"><div class="ctButton ctBtn2 noselect"><i class="material-icons" style="font-size:21px;margin-top:3px;">email</i> <div class="ctButtonText">تماس با وب‌پژوه</div></div></a>
+                <a href="#services" class="goto"><div class="ctButton ctBtn1 noselect animated fadeInRight delay-5s"><i class="material-icons">business_center</i> <div class="ctButtonText">مشاهده‌ی خدمات</div></div></a>
+                <a href="#contact" class="goto"><div class="ctButton ctBtn2 noselect animated fadeInRight delay-55s"><i class="material-icons" style="font-size:21px;margin-top:3px;">email</i> <div class="ctButtonText">تماس با وب‌پژوه</div></div></a>
             </div>
         </div>
     </div>
@@ -240,10 +241,10 @@
 <script src="./assets/js/web.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127646702-2"></script>
 <script>
-    window.dataLayer = window.dataLayer || [];
+    /*window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-127646702-2');
+    gtag('config', 'UA-127646702-2');*/
 </script>
 </body>
 </html>
