--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@
 <script src="./assets/js/web.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127646702-2"></script>
 <script>
-    /*window.dataLayer = window.dataLayer || [];
+    window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-127646702-2');*/
+    gtag('config', 'UA-127646702-2');
 </script>
 </body>
 </html>
