--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <div class="skill">
                             <div class="skillTitle">Angular</div>
                             <div class="skillProgressBar">
-                                <div class="skillProgress" percent="7%"></div>
+                                <div class="skillProgress" percent="5%"></div>
                             </div>
                         </div>
                         <div class="skill">
@@ -161,12 +161,12 @@
                             </div>
                         </div>
                         <div class="skill">
-                            <div class="skillTitle">CodeIgniter</div>
+                            <div class="skillTitle">Laravel</div>
                             <div class="skillProgressBar">
-                                <div class="skillProgress" percent="48%"></div>
+                                <div class="skillProgress" percent="4%"></div>
                             </div>
                         </div>
-                        <p class="otherSkills">Other Skills: BackBoneJS, WordPress, MySQL, F3, CorelDraw, Bootstrap, 960, Materialize</p>
+                        <p class="otherSkills">Other Skills: CodeIgniter, WordPress, MySQL, F3, CorelDraw, Bootstrap, 960, Materialize</p>
                     </div>
                 </div>
             </div>
