--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <ul class="menuNavbar">
             <li><a href="#services" class="goto">خدمات</a></li>
             <li><a href="#portfolio" class="goto">نمونه‌کارها</a></li>
+            <li><a href="https://virgool.io/@webpajooh" rel="nofollow" class="goto">وبلاگ</a></li>
             <li><a href="#github" class="goto">گیت‌هاب</a></li>
             <li><a href="#about" class="goto">کمی از من!</a></li>
             <li><a href="#contact" class="goto">تماس با وب‌پژوه</a></li>
