--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <ul class="navbar">
                     <li><a href="#services" class="goto">خدمات</a></li>
                     <li><a href="#portfolio" class="goto">نمونه‌کارها</a></li>
+                    <li><a href="https://virgool.io/@webpajooh" rel="nofollow">وبلاگ</a></li>
                     <li><a href="#github" class="goto">گیت‌هاب</a></li>
                     <li><a href="#about" class="goto">کمی از من!</a></li>
                     <li><a href="#contact" class="goto">تماس با وب‌پژوه</a></li>
