--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>وب‌پژوه</title>
-    <meta name="description" content="وب‌پژوه، طراحی و توسعه‌ی وب">
+    <title>وب پژوه</title>
+    <meta name="description" content="وب پژوه، طراحی و توسعه‌ی وب">
     <meta property="og:title" content="وب‌پژوه" />
     <meta property="og:description" content="طراحی و توسعه‌ی وب">
     <meta property="og:image" content="https://avatars1.githubusercontent.com/u/17279395?s=240" />
