--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 </section>
 
 <section id="github" class="section blackSection">
+    <div id="githubBGIcon"></div>
     <div class="container">
         <h2 class="noselect"><span>گیت‌هاب</span></h2>
         <div class="githubsBox row">
