--- a/index.html
+++ b/index.html
@@ -13,238 +13,10 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
-<div class="coverBG">
-    <div class="mobileVHeader"></div>
-    <div id="mobileMenu">
-        <ul class="menuNavbar">
-            <li><a href="#services" class="goto">خدمات</a></li>
-            <li><a href="#portfolio" class="goto">نمونه‌کارها</a></li>
-            <li><a href="https://virgool.io/@webpajooh" rel="nofollow" class="goto">وبلاگ</a></li>
-            <li><a href="#github" class="goto">گیت‌هاب</a></li>
-            <li><a href="#about" class="goto">کمی از من!</a></li>
-            <li><a href="#contact" class="goto">تماس با وب‌پژوه</a></li>
-        </ul>
-    </div>
-    <div class="container">
-        <header id="header">
-            <a href="."><div id="navLogo">وب‌پژوه</div></a>
-            <div class="mobile-nav-button d-lg-none d-md-none noselect">
-                <i class="material-icons mnbi">menu</i>
-            </div>
-            <nav id="nav" class="noselect d-sm-none d-md-none d-lg-block">
-                <ul class="navbar">
-                    <li><a href="#services" class="goto">خدمات</a></li>
-                    <li><a href="#portfolio" class="goto">نمونه‌کارها</a></li>
-                    <li><a href="https://virgool.io/@webpajooh" rel="nofollow">وبلاگ</a></li>
-                    <li><a href="#github" class="goto">گیت‌هاب</a></li>
-                    <li><a href="#about" class="goto">کمی از من!</a></li>
-                    <li><a href="#contact" class="goto">تماس با وب‌پژوه</a></li>
-                </ul>
-            </nav>
-        </header>
-        <div id="coverText">
-            <h2 class="ctTitle animated fadeInDown">وب‌پژوه، ایده‌ها را حقیقت می‌بخشد!</h2>
-            <div class="ctText">
-                <p class="animated fadeIn delay-1s">دنیای امروز، دنیای ارتباطات است و فاصله‌ها معنای سابق خود را از دست داده‌اند و هرکس به روش‌های قدیمی اکتفا کند، از قافله عقب مانده است؛ شما می‌توانید حرفه‌ی خود را به صورت اینترنتی معرفی کنید و آن را در دسترس کسانی قرار دهید که حتی در یک کشور یا قاره با شما زندگی نمی‌کنند! جدای از آنکه هیچ منشی نمی‌تواند همزمان با بیش از یک نفر صحبت کند، از پرسش‌های تکراری مشتریان و مراجعین نیز خسته و شاید گاهی عصبانی شود! اما کامپیوترها خستگی‌ناپذیرند و می‌توانند درباره‌ی شما هزاران بار توضیح داده و درخواست‌های مراجعین بسیاری را به صورت همزمان پاسخ دهند! آیا این کمی بیشتر از «هیجان‌انگیز» نیست؟!</p>
-                <ul class="cTextList">
-                    <li class="ctlLi animated fadeInDown delay-2s">اگر صاحب یک شرکت تجاری یا خدماتی هستید، یک وب‌سایت به بهترین نحو ممکن می‌تواند به بازدهی بیشتر کار شما کمک کند!</li>
-                    <li class="ctlLi animated fadeInDown delay-27s">اگر یک شخصیت سیاسی یا اجتماعی هستید، باید فعالیت‌هایتان را در وب‌سایت جدیدتان ثبت کرده و به نحو قابل توجهی مردمی‌تر باشید!</li>
-                    <li class="ctlLi animated fadeInDown delay-34s">اگر پژوهشگر و در مسائل علمی صاحب نوشته‌هایی هستید که نمی‌خواهید نزد افرادی معدود غبار بخورند، می‌توانید آنها را در وب‌سایت جدید خود نشر کنید!</li>
-                    <li class="ctlLi animated fadeInDown delay-4s">به اختصار: اگر می‌خواهید بیشتر دیده شوید، «وب‌پژوه» شما را در این راه یاری می‌دهد!</li>
-                </ul>
-            </div>
-            <div class="ctButtons">
-                <a href="#services" class="goto"><div class="ctButton ctBtn1 noselect animated fadeInRight delay-5s"><i class="material-icons">business_center</i> <div class="ctButtonText">مشاهده‌ی خدمات</div></div></a>
-                <a href="#contact" class="goto"><div class="ctButton ctBtn2 noselect animated fadeInRight delay-55s"><i class="material-icons" style="font-size:21px;margin-top:3px;">email</i> <div class="ctButtonText">تماس با وب‌پژوه</div></div></a>
-            </div>
-        </div>
-    </div>
-</div>
-
-<section id="services" class="section blackSection">
-    <div class="container">
-        <h2 class="noselect"><span>خدمات</span></h2>
-        <div class="servicesBox row">
-            <div class="serviceBox col-lg-4">
-                <div class="serviceIcon noselect"><i class="material-icons">format_paint</i></div>
-                <h3 class="serviceTitle">طراحی وب</h3>
-                <p class="serviceText">طراحی وب‌سایت (Front-End) با بهره‌گیری از فریم‌ورک‌های به‌روز و رعایت اصول لازم، برای آن‌که وب‌سایت شما جلوه‌ی زیبا و کاربرپسندی داشته باشد.</p>
-            </div>
-            <div class="serviceBox col-lg-4">
-                <div class="serviceIcon noselect"><i class="material-icons">code</i></div>
-                <h3 class="serviceTitle">توسعه‌ی وب</h3>
-                <p class="serviceText">برنامه‌نویسی (Back-End) با فریم‌ورک‌های محبوب PHP، تا نرم‌افزارهایی خلاقانه و کارآمد با امنیت بالا تولید کنیم و در صورت لزوم، آپدیت آن‌ها ساده باشد!</p>
-            </div>
-            <div class="serviceBox col-lg-4">
-                <div class="serviceIcon noselect"><i class="material-icons">color_lens</i></div>
-                <h3 class="serviceTitle">طراحی پوسته‌ی وردپرس</h3>
-                <p class="serviceText">وردپرس، یکی از محبوب‌ترین سیستم‌های مدیریت محتواست که به انعطاف بالا و سادگی خود مشهور است و راه‌اندازی وب‌سایت بر پایه‌ی وردپرس در بسیاری از اوقات مطلوب می‌باشد.</p>
-            </div>
-            <div class="serviceBox col-lg-4">
-                <div class="serviceIcon noselect"><i class="material-icons">android</i></div>
-                <h3 class="serviceTitle">ساخت ربات</h3>
-                <p class="serviceText">ربات‌ها همه جا هستند! با داشتن یک ربات تلگرامی، می‌توانید خدمات خود را به گونه‌ای بهتر به مخاطبان عرضه کنید و همچنین می‌تواند یک پل ارتباطی مناسب میان شما و مشتریان باشد.</p>
-            </div>
-            <div class="serviceBox col-lg-4">
-                <div class="serviceIcon noselect"><i class="material-icons">settings</i></div>
-                <h3 class="serviceTitle">بهینه‌سازی وب‌سایت</h3>
-                <p class="serviceText">بهینه‌سازی وب‌سایت شما موجب افزایش سرعت لود، بالارفتن رتبه‌ی گوگل و نتیجتاً «بیشتر دیده‌شدن» می‌شود و بسیاری از وب‌سایت‌ها محتاج چنین تغییراتی هستند!</p>
-            </div>
-            <div class="serviceBox col-lg-4">
-                <div class="serviceIcon noselect"><i class="material-icons">live_help</i></div>
-                <h3 class="serviceTitle">پشتیبانی</h3>
-                <p class="serviceText">پشتیبانی برای کارهای انجام شده توسط «وب‌پژوه»، با رعایت تعهد کاری و وقت‌شناسی انجام می‌شود و باید توجه داشت که میان «رفع خطا» با «افزودن یک قابلیت» تفاوت وجود دارد.</p>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section id="portfolio" class="section whiteSection">
-    <div class="container">
-        <h2 class="noselect"><span>نمونه‌کارها</span></h2>
-        <div class="portfoliosBox row">
-            <div class="preloader portfolioPreloader material-icons noselect">cached</div>
-        </div>
-        <div class="moreBtn portfolioMore noselect"><i class="material-icons">expand_more</i></div>
-    </div>
-</section>
-
-<section id="github" class="section blackSection">
-    <div id="githubBGIcon"></div>
-    <div class="container">
-        <h2 class="noselect"><span>گیت‌هاب</span></h2>
-        <div class="githubsBox row">
-            <div class="preloader githubPreloader material-icons noselect">cached</div>
-        </div>
-        <div class="moreBtn githubMore noselect"><i class="material-icons">expand_more</i></div>
-    </div>
-</section>
-
-<section id="about" class="section whiteSection" style="padding-bottom: 50px;">
-    <div class="container">
-        <h2 class="noselect"><span>کمی از من!</span></h2>
-        <div class="aboutPaper">
-            <div class="row">
-                <div class="col-lg-8">
-                    <h3 class="aboutTitle">مفید و مختصر</h3>
-                    <p class="aboutText">مهندس نرم‌افزاری که علاقه‌ی بسیاری به دنیای وب و تکنولوژی‌های آن دارد! از کار گروهی در صورت وجود نظم لازم فراری نیست و از کار انفرادی هم هراسی ندارد، و در هر دو صورت دوست دارد که وظیفه‌ی خود را به درستی انجام دهد و نتیجه‌ای که حاصل می‌شود، مقبول باشد. تلاش دارد از تمامی امکاناتی که در دسترس دارد، بیشترین استفاده را ببرد و از یادگیری تکنیک‌ها و تکنولوژی‌های جدید ابایی ندارد، و بروز خلاقیت و ایده‌های جدید را بسیار می‌پسندد و اگر به جمع‌آوری یک کلکسیون اهتمام می‌ورزید، آن، کلکسیون رابط‌های کاربری وب می‌بود!</p>
-                    <p class="aboutText" style="margin-bottom:0 !important;">تحصیلات اولیه را تا دوره‌ی دانشگاه به طور ممتاز تمام کرده است، اوقات فراغت خود را با مطالعه و کدنویسی سپری می‌کند و خواندن تاریخ -غیر معاصر، به خصوص تاریخ باستان- را دوست دارد و اگرچه زمانی به رمان‌خوانی علاقه‌مند بوده، اما اکنون آن را خالی از فایده می‌داند. شاید در حین کار گاهی جدی شود، اما شوخ‌طبعی را از یاد نمی‌برد و حق هر کدام را در جای خود ادا می‌کند! از دروغ و بدقولی متنفر است و هرچیزی را فراموش کند، از این مورد نمی‌تواند چشم‌پوشی کند!</p>
-                </div>
-                <div class="col-lg-4" style="direction: ltr;">
-                    <h3 class="aboutTitle skillsTitle">مهارت‌ها</h3>
-                    <div class="skills noselect">
-                        <div class="skill">
-                            <div class="skillTitle">Adobe Photoshop</div>
-                            <div class="skillProgressBar">
-                                <div class="skillProgress" percent="80%"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skillTitle">HTML5 & CSS3</div>
-                            <div class="skillProgressBar">
-                                <div class="skillProgress" percent="85%"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skillTitle">jQuery</div>
-                            <div class="skillProgressBar">
-                                <div class="skillProgress" percent="57%"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skillTitle">Angular</div>
-                            <div class="skillProgressBar">
-                                <div class="skillProgress" percent="5%"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skillTitle">PHP</div>
-                            <div class="skillProgressBar">
-                                <div class="skillProgress" percent="58%"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skillTitle">Laravel</div>
-                            <div class="skillProgressBar">
-                                <div class="skillProgress" percent="35%"></div>
-                            </div>
-                        </div>
-                        <p class="otherSkills">Other Skills: CodeIgniter, WordPress, MySQL, F3, CorelDraw, Bootstrap, 960, Materialize</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section id="contact" class="section blackSection">
-    <div class="container">
-        <h2 class="noselect"><span>تماس با وب‌پژوه</span></h2>
-        <div class="aboutPaper contactPaper">
-            <div class="row" style="padding-top: 10px;">
-                <div class="col-lg-2 col-sm-4">
-                    <label class="wpLabel wpl1">نام</label>
-                    <input id="cnName" class="wpInput" lblClass=".wpl1">
-                </div>
-                <div class="col-lg-3 col-sm-8">
-                    <label class="wpLabel wpl2">نام خانوادگی</label>
-                    <input id="cnFamily" class="wpInput" lblClass=".wpl2">
-                </div>
-                <div class="col-lg-4">
-                    <label class="wpLabel wpl3">آدرس پست الکترونیکی</label>
-                    <input id="cnMail" class="wpInput" style="direction:ltr;text-align:left;font-size:16px;" lblClass=".wpl3">
-                </div>
-                <div class="col-lg-3">
-                    <div id="cnCat" class="wpSelect noselect">
-                        <span class="wpSelectTitle">موضوع پیام</span>
-                        <span class="material-icons wpSelectArrow">keyboard_arrow_down</span>
-                        <ul class="wpSelectUl">
-                            <li class="setMessageCat" cat="سفارش و پیشنهاد کار">سفارش و پیشنهاد کار</li>
-                            <li class="setMessageCat" cat="انتقادات و پیشنهادات">انتقادات و پیشنهادات</li>
-                            <li class="setMessageCat" cat="موارد دیگر">موارد دیگر</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-12">
-                    <label class="wpLabel wpl4" style="top:23px;">متن پیام شما</label>
-                    <input id="cnMessage" class="wpInput" style="margin-top: 22px;">
-                </div>
-                <div class="col-lg-12">
-                    <p class="contactFormMessage"></p>
-                    <div id="cnSend" class="noselect"><span>ارسال پیام</span></div>
-                </div>
-            </div>
-        </div>
-        <footer id="footer" class="row">
-            <div class="col-lg-6 col-sm-12 col-md-12 footerRight noselect">
-                <span class="ft1">طراحی‌شده با</span> <span class="footerHeart material-icons">favorite</span><span class="ft2"> توسط «وب‌پژوه»، کلیه‌ی حقوق محفوظ است.</span>
-            </div>
-            <div class="footerLeft col-lg-6 col-sm-12 col-md-12" style="float:left;">
-                <ul id="footerSocial">
-                    <a href="https://t.me/WebPajooh" title="Telegram Channel" rel="nofollow" target="_blank"><li class="fsIcon fsTelegram"></li></a>
-                    <a href="https://www.instagram.com/webpajooh" title="Instagram" rel="nofollow" target="_blank"><li class="fsIcon fsInstagram"></li></a>
-                    <a href="https://github.com/webpajooh" title="Github" rel="nofollow" target="_blank"><li class="fsIcon fsGithub"></li></a>
-                    <a href="https://codepen.io/webpajooh" title="CodePen" rel="nofollow" target="_blank"><li class="fsIcon fsCodepen"></li></a>
-                    <a href="mailto:webpajooh@gmail.com" title="Email"><li class="fsIcon fsEmail"></li></a>
-                    <a href="https://idpay.ir/webpajooh" title="Donate" rel="nofollow" target="_blank"><li class="fsIcon fsDonate"></li></a>
-                </ul>
-            </div>
-        </footer>
-    </div>
-</section>
-
-<div id="cnToast">
-    <span>پیام شما با موفقیت ارسال شد!</span>
-</div>
-
-<div id="goTop" class="noselect">
-    <div class="material-icons">arrow_upward</div>
-</div>
 
 <script src="./assets/js/jquery.js"></script>
-<script src="./assets/js/web.js"></script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127646702-2"></script>
 <script>
+    window.location.replace("http://stackoverflow.com");
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
