--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <script src="./assets/js/jquery.js"></script>
 <script>
-    window.location.replace("http://stackoverflow.com");
+    window.location.replace("https://web-pajooh.ir/");
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
